# nanokontrol

./: nanokontrol.py  scaler.py  setup.cfg  watchpulse.py
nanokontrol/: __init__.py  datatypes.py  device.py  exc.py  main.py  sysex.py
