[metadata]
name = nanokontrol
version = attr: nanokontrol.__version__
description = Control your computer with a Korg Nanokontrol 2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsks/nanokontrol
author = Lars Kellogg-Stedman
author_email = lars@oddbit.com

[options]
packages = find:
install_requires =
    click
    mido
    pulsectl
    evdev

[options.entry_points]
console_scripts =
    nanokontrol = nanokontrol.main:main

[flake8]
max-line-length = 100
ignore = H405
